--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "18"
   },
+  "resolutions": {
+    "postcss": "8.4.31"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
@@ -18,6 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
