--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "heroku-postbuild": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prebuild": "export NODE_OPTIONS=--openssl-legacy-provider"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
