--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "fraction.js": "^5.2.2",
     "markdown": "^0.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
