--- a/package.json
+++ b/package.json
@@ -5,31 +5,34 @@
   "engines": {
     "node": "18"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
+  },
   "resolutions": {
-  "postcss": "8.4.31",
-  "autoprefixer": "10.4.14",
-  "postcss-flexbugs-fixes": "5.0.2",
-  "postcss-preset-env": "6.7.0"
-},
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.14",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-preset-env": "6.7.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "fraction.js": "^5.2.2",
     "markdown": "^0.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "fraction.js": "^4.1.1"
   },
-  "scripts": {
-    "preinstall": "npx npm-force-resolutions",
-    "start": "react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "npm-force-resolutions": "^0.0.10"
   },
   "eslintConfig": {
     "extends": [
@@ -48,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "npm-force-resolutions": "^0.0.10"
   }
 }
